--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Crystal Game</title>
-</head>
-<body>
+	<head>
+		<title>Crystal Game</title>
+		
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		
+		<script type="text/javascript" src= "assets/javascript/game.js"></script>
 
-</body>
+	</head>
+		
+	<body>
+		<div id="box1">
+		<h1>CrystalsCollector!</h1>
+
+<p>You will be given a random number at the start of the game</p>
+
+<p>There are four crystals below.  By clicking on a crystal you will add a specific amount of points to your total score</p>
+
+<p>You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.</p>
+
+<p>The value of each crystal is hidden from you until you click on it</p>
+
+<p>Each time when the game starts, the game will change the values of each crystal</p>
+
+		</div>
+		<div id="box2"></div>
+
+/*Random Number*/
+
+		<div id="box3"></div>
+
+/*You_____*/
+
+		<script type="text/javascript">
+
+		</script>
+	</body>
 </html>
